feat(api): create and getone is done
